--- a/templates/index.html
+++ b/templates/index.html
@@ -16,6 +16,14 @@
                 <label for="textInput">Enter Text:</label>
                 <textarea class="form-control" id="textInput" name="inputText" rows="4"></textarea>
             </div>
+            <div class="form-group">
+                <label for="optionSelect">Choose Option:</label>
+                <select class="form-control" id="optionSelect" name="option">
+                    <option value="Tokenize">Tokenize</option>
+                    <option value="PosTag">POS Tagging</option>
+                    <option value="All">All</option>
+                </select>
+            </div>
             <button type="submit" class="btn btn-primary">Submit</button>
         </form>
         
