--- a/templates/index.html
+++ b/templates/index.html
@@ -22,6 +22,7 @@
                     <option value="Tokenize">Tokenize</option>
                     <option value="PosTag">POS Tagging</option>
                     <option value="NER">NER</option>
+                    <option value="Sentiment">Sentiment Analysis</option>
                     <option value="All">All</option>
                 </select>
             </div>
@@ -43,16 +44,27 @@
                 <p>{{ pos_tagged_text }}</p>
             {% endif %}
         </div>
-
+        
         <!-- Named Entity Recognition (NER) Display -->
         <div id="nerResult" class="mt-4">
             {% if ner_result %}
                 <h3>Named Entities:</h3>
                 <ul>
                     {% for label, entities in ner_result.items() %}
-                        <li>{{ label }}: {{ ', '.join(entities) }}</li>
+                        <li>{{ label }}: {{ entities }}</li>
                     {% endfor %}
                 </ul>
+            {% endif %}
+        </div>
+        
+        <!-- Sentiment Analysis Result Display -->
+        <div id="sentimentResult" class="mt-4">
+            {% if sentiment_scores %}
+                <h3>Sentiment Scores:</h3>
+                <p>Positive: {{ sentiment_scores.pos }}</p>
+                <p>Negative: {{ sentiment_scores.neg }}</p>
+                <p>Neutral: {{ sentiment_scores.neu }}</p>
+                <p>Compound: {{ sentiment_scores.compound }}</p>
             {% endif %}
         </div>
     </div>
